example/http-echo/https-terminate/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
    hostname: "*.haproxy"
  - name: https
    protocol: HTTPS
    port: 8443
    tls:
      certificateRefs:
      # test
      - kind: Secret
        group: ""
        name: offload
      - kind: Secret
        group: ""
        name: offload2
        namespace: test
      ## test2
      - kind: Secret
        group: ""
        name: offload
        namespace: test2
      - kind: Secret
        group: ""
        name: offload2
        namespace: test2
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
  infrastructure:
    parametersRef:
      group: gate.v3.haproxy.org
      kind: HugGate
      name: huggate2
