example/http-echo/https-terminate/gateway2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway2
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http
    port: 8081
    protocol: HTTP
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
    hostname: "*.haproxy"
  - name: https
    protocol: HTTPS
    port: 8444
    tls:
      certificateRefs:
      ### test2
      - kind: Secret
        group: ""
        name: offload
        namespace: test2
    #   - kind: Secret
    #     group: ""
    #     name: offload2
    #     namespace: test2
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
  infrastructure:
    parametersRef:
      group: gate.v3.haproxy.org
      kind: HugGate
      name: huggate2
